tests/baselines/reference/moduleReopenedTypeSameBlock.errors.txt
moduleReopenedTypeSameBlock.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleReopenedTypeSameBlock.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== moduleReopenedTypeSameBlock.ts (2 errors) ====
    module M { export class C1 { } }
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface I { n: number; }
        export class C2 { f(): I { return null; } }
    }
    